only stickily position sidebar if viewport height is > 800px

--- a/app/assets/stylesheets/components/_sidebar.sass
+++ b/app/assets/stylesheets/components/_sidebar.sass
@@ -12,9 +12,10 @@
     align-items: flex-start
 
   @media screen and (min-width: $large)
-  @media screen and (min-height: 80vh)
     & > .content
       width: 100%
+  @media screen and (min-height: 800px)
+    & > .content
       position: -webkit-sticky
       position: sticky
       top: calc((var(--gutter)/2) + 4.32rem)
