--- a/app/assets/stylesheets/shared/_header.sass
+++ b/app/assets/stylesheets/shared/_header.sass
@@ -72,19 +72,28 @@ header.-box
   border-bottom: 1px solid var(--black)
   text-align: left
   padding: 0.75rem 1rem 0.55rem
-  .heading, .headline, .meta
+  .heading, .headline
     font-weight: 500
     font-size: var(--b4)
     &:before
       content: '■ '
   .meta
-    div
-      display: inline-block
+    font-weight: 500
+    font-size: var(--b4)
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    div:first-child
+      &:before
+        content: '■ '
 
     .name
+      flex: 1
 
     .date
-      float: right
+      flex: 1
+      text-align: right
 
   &.-black
     color: var(--default)
