--- a/app/views/articles/templates/_podcast.html.haml
+++ b/app/views/articles/templates/_podcast.html.haml
@@ -14,7 +14,7 @@
           %li= link_to "Facebook", "http://www.facebook.com/share.php?u=#{ "https://www.dublininquirer.com#{ article.path }" }"
           %li= link_to "Twitter", "https://twitter.com/intent/tweet?text=#{ article.title }&url=#{ "https://www.dublininquirer.com#{ article.path }" }"
           - if article.commentable?
-            %li= link_to "Comment", "#{ article.path }#comments"
+            %li= link_to "Respond", "#comments", 'data-behaviour': 'scroll'
 
   %article.article.-standard{lang: 'en'}
     - if article.featured_artwork.present?
