--- a/app/assets/stylesheets/components/_logo.sass
+++ b/app/assets/stylesheets/components/_logo.sass
@@ -10,8 +10,9 @@
 
   svg
     display: block
+    object-fit: contain
     width: 100%
-    height: auto
+    height: 100%
 
   &.-small
     height: 1.625rem
