--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -3,6 +3,8 @@
 - set_meta_tags canonical: "https://www.dublininquirer.com#{ @article.path }"
 - set_meta_tags author: "https://www.dublininquirer.com/contributors/#{ @article.author.try(:slug) }"
 
+- set_meta_tags og: {type: 'article', title: @article.title, description: @article.excerpt}
+
 - if @article.featured_artwork.present?
   - set_meta_tags image_src: @article.featured_artwork.image.large.url
   - set_meta_tags og: {image: @article.featured_artwork.image.large.url}
