--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,9 +1,10 @@
-- set_meta_tags title: @article.title
-- set_meta_tags description: @article.excerpt
+- set_meta_tags title: raw(@article.title)
+- set_meta_tags description: raw(@article.excerpt)
 - set_meta_tags canonical: "https://www.dublininquirer.com#{ @article.path }"
 - set_meta_tags author: "https://www.dublininquirer.com/contributors/#{ @article.author.try(:slug) }"
 
-- set_meta_tags og: {type: 'article', title: @article.title, description: @article.excerpt}
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://www.dublininquirer.com#{ @article.path }">
 
 - if @article.featured_artwork.present?
   - set_meta_tags image_src: @article.featured_artwork.image.large.url
