--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -3,8 +3,7 @@
 - set_meta_tags canonical: "https://www.dublininquirer.com#{ @article.path }"
 - set_meta_tags author: "https://www.dublininquirer.com/contributors/#{ @article.author.try(:slug) }"
 
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://www.dublininquirer.com#{ @article.path }">
+- set_meta_tags og: {type: article, url: "https://www.dublininquirer.com#{ @article.path }"}
 
 - if @article.featured_artwork.present?
   - set_meta_tags image_src: @article.featured_artwork.image.large.url
