more image size tweaking

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -6,9 +6,9 @@
 - set_meta_tags og: {type: 'article', url: "https://www.dublininquirer.com#{ @article.path }", description: raw(@article.excerpt), title: raw(@article.title)}
 
 - if @article.featured_artwork.present?
-  - set_meta_tags image_src: @article.featured_artwork.image.massive.url
-  - set_meta_tags og: {image: @article.featured_artwork.image.massive.url}
-  - set_meta_tags twitter: {image: {'_': @article.featured_artwork.image.massive.url}}
+  - set_meta_tags image_src: @article.featured_artwork.image.large.url
+  - set_meta_tags og: {image: @article.featured_artwork.image.large.url}
+  - set_meta_tags twitter: {image: {'_': @article.featured_artwork.image.large.url}}
 
 = render partial: "articles/templates/#{ @template }", locals: { article: @article, limited: @limited }
 
