--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -10,6 +10,10 @@
   - set_meta_tags og: {image: @article.featured_artwork.image.large.url}
   - set_meta_tags twitter: {image: {'_': @article.featured_artwork.image.large.url}}
 
+  - if @article.featured_artwork.width_px.present?
+    - set_meta_tags 'og:image:width', @article.featured_artwork.width_px
+    - set_meta_tags 'og:image:height', @article.featured_artwork.height_px
+
 = render partial: "articles/templates/#{ @template }", locals: { article: @article, limited: @limited }
 
 - if !@limited
