easier upgrading to higher subscription levels

--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -1,6 +1,6 @@
 .block.-mt4
   %footer.primary-footer
-    .wrapper{role: 'layout'}
+    .wrapper.-contained{role: 'layout'}
       .container
         .row
           .col-xs-12.col-md-3
