--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,9 +1,11 @@
 - set_meta_tags title: raw(@article.title)
 - set_meta_tags description: raw(@article.excerpt)
 - set_meta_tags canonical: "https://www.dublininquirer.com#{ @article.path }"
+- set_meta_tags 'article:publisher': 'https://www.facebook.com/dublininquirer/'
+- set_meta_tags 'article:author': "https://www.dublininquirer.com/contributors/#{ @article.author.try(:slug) }"
 - set_meta_tags author: "https://www.dublininquirer.com/contributors/#{ @article.author.try(:slug) }"
 
-- set_meta_tags og: {type: 'article', url: "https://www.dublininquirer.com#{ @article.path }", description: raw(@article.excerpt), title: raw(@article.title), 'article:publisher': 'https://www.facebook.com/dublininquirer/'}
+- set_meta_tags og: {type: 'article', url: "https://www.dublininquirer.com#{ @article.path }", description: raw(@article.excerpt), title: raw(@article.title)}
 
 - if @article.featured_artwork.present?
   - set_meta_tags image_src: @article.featured_artwork.image.large.url
