bg of p.-category should be default, not white

--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -140,7 +140,7 @@
   text-align: left
   a, a:link, a:visited
     color: var(--black)
-    background-color: var(--white)
+    background-color: var(--default)
     border: 1px solid var(--black)
     display: inline-block
     font-size: var(--b4)
@@ -148,5 +148,5 @@
     padding: 0.25rem 0.5rem 0.175rem
     &:hover
       color: var(--blue)
-      background-color: var(--white)
+      background-color: var(--default)
       border-color: var(--blue)
