revisit a number of disparate styles

--- a/app/assets/stylesheets/components/_meta-nav.sass
+++ b/app/assets/stylesheets/components/_meta-nav.sass
@@ -1,9 +1,11 @@
 .meta-nav
   border-bottom: 1px solid var(--black)
-  display: flex
-  flex-direction: row
-  justify-content: space-between
   transition: top 0.5s ease
+
+  .meta-nav_content
+    display: flex
+    flex-direction: row
+    justify-content: space-between
 
   .right, .left
     display: flex
