--- a/app/assets/stylesheets/components/_notice.sass
+++ b/app/assets/stylesheets/components/_notice.sass
@@ -1,11 +1,11 @@
 .notice.-fixed
   position: fixed
-  left: 0
-  right: 0
+  left: calc(var(--gutter)/4)
+  right: calc(var(--gutter)/4)
   bottom: 0
   z-index: 999
-  border-top: 1px solid var(--black)
-  border-bottom: 0.75rem solid var(--black)
+  border: 1px solid var(--black)
+  border-bottom: 0
   background: var(--default)
   padding: 0
   display: flex
