--- a/app/assets/stylesheets/components/_primary-footer.sass
+++ b/app/assets/stylesheets/components/_primary-footer.sass
@@ -1,10 +1,6 @@
 .primary-footer
-  padding-top: 12.5vh
-  padding-bottom: 25vh
   font-size: var(--b3)
   line-height: 1.5
-  background-color: var(--black)
-  color: var(--default)
 
   .logotype
     width: 90%
@@ -13,7 +9,7 @@
     margin-bottom: 1rem
 
     svg
-      fill: var(--default)
+      fill: var(--black)
 
   big
     display: block
@@ -31,4 +27,4 @@
       margin: 0
 
   a, a:link, a:visited
-    color: var(--default)
+    color: var(--black)
