--- a/app/assets/stylesheets/layouts/_overlay.sass
+++ b/app/assets/stylesheets/layouts/_overlay.sass
@@ -7,11 +7,18 @@
   background-color: var(--default)
   z-index: 9999
   display: flex
+  flex-direction: column
   justify-content: stretch
   align-items: stretch
+  padding-top: 0.75rem
 
-  .overlay-content
+  & > .content
     flex: 1
     display: flex
     justify-content: stretch
     align-items: stretch
+
+    & > .frame
+      flex: 1
+
+  & > .footer
