--- a/app/assets/stylesheets/shared/_header.sass
+++ b/app/assets/stylesheets/shared/_header.sass
@@ -1,3 +1,4 @@
+
 .header
   .anchor
     position: absolute
@@ -6,6 +7,23 @@
     height: 0
     width: 0
     overflow: hidden
+
+header.-static
+  padding: 2rem 10% 2rem 0
+  border-bottom: 1px solid var(--black)
+
+  .heading, .headline
+    font-weight: 600
+    font-size: var(--h2)
+    line-height: 1.25
+    letter-spacing: -0.025em
+
+  &.-low-contrast
+    .heading, .headline, p
+      display: inline
+      font-weight: 600
+      font-size: var(--h2)
+      line-height: 1.25
 
 header.-fancy
   margin-bottom: 1rem
