--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -30,16 +30,15 @@
   - if @article.commentable?
     .wrapper.-small{role: 'layout'}= render partial: 'comments/comments', locals: { article: @article }
 
-  .wrapper.-contained{role: 'layout'}
-    .block.-gy
-      %header.header.-issue
-        %h4.heading Also in the #{ @article.issue_date.strftime('%-d %B %Y') } issue
+  .block.-mt4.-mb4.-bt.-pt4
+    %header.header.-issue
+      %h4.heading Also in the #{ @article.issue_date.strftime('%-d %B %Y') } issue
 
-      .row
-        - @article.from_the_same_issue.by_position.first(6).each do |article|
-          .col-xs-12.col-md-4.col-lg-2.col.flex
-            = render partial: 'articles/excerpts/tiny', locals: { article: article }
-            %hr.-stroke
+    .row
+      - @article.from_the_same_issue.by_position.first(6).each do |article|
+        .col-xs-12.col-md-4.col-lg-2.col.flex
+          = render partial: 'articles/excerpts/tiny', locals: { article: article }
+          %hr.-stroke
 
   - if permission_for_cookie? and @article.paywalled? # yes cookie, and yes paywalled
     = render partial: 'user_sessions/paywall'
