--- a/app/views/layouts/_content-nav.html.haml
+++ b/app/views/layouts/_content-nav.html.haml
@@ -1,16 +1,17 @@
-%nav.content-nav
-  .left
-    .links
-      %span
-        %em Issue for
-        #{ @current_issue.issue_date.strftime("%-d %b '%y") }
-  .center
-    .links.-main
-      = link_to "City Desk", category_path('city-desk')
-      = link_to "Unreal Estate", category_path('unreal-estate')
-      = link_to "Culture Desk", category_path('culture-desk')
-      = link_to "The Dish", category_path('the-dish')
-      = link_to "Opinion", category_path('opinion')
-  .right
-    .links
-      = link_to "Past Issues", :issues, class: 'button -nav -subtle'
+.frame{role: 'layout'}
+  %nav.content-nav
+    .left
+      .links
+        %span
+          %em Issue for
+          #{ @current_issue.issue_date.strftime("%-d %b '%y") }
+    .center
+      .links.-main
+        = link_to "City Desk", category_path('city-desk')
+        = link_to "Unreal Estate", category_path('unreal-estate')
+        = link_to "Culture Desk", category_path('culture-desk')
+        = link_to "The Dish", category_path('the-dish')
+        = link_to "Opinion", category_path('opinion')
+    .right
+      .links
+        = link_to "Past Issues", :issues, class: 'button -nav -subtle'
