--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -5,8 +5,8 @@
 .wrapper.-contained{role: 'layout'}
   %header.-static
     %h1.heading Contact us
-    :markdown
-      We love tips, complaints, corrections, and compliments. You can always reach us by email at [info@dublininquirer.com](mailto:info@dublininquirer.com), but if you’re looking for something more secure – _although nothing is 100 percent_ – then, here are some other options.
+    %p.p.-b1
+      We love tips, complaints, corrections, and compliments. You can always reach us by email at <a href="mailto:info@dublininquirer.com">info@dublininquirer.com</a>, but if you’re looking for something more secure – <em>although nothing is 100 percent</em> – then, here are some other options:
 
   .article
     :markdown
