--- a/app/assets/stylesheets/shared/_list.sass
+++ b/app/assets/stylesheets/shared/_list.sass
@@ -57,13 +57,12 @@
           content: ''
 
   &.-tags
-    margin-top: -0.5rem
-    line-height: 2em
     li
       display: inline-block
 
     a, a:link, a:visited, .tag
-      font-size: var(--b4)
+      margin-top: 0
+      margin-bottom: 0
       color: var(--red)
       border: 1px solid var(--red)
       padding: 0.5rem 0.75rem
@@ -74,5 +73,4 @@
 
     @media screen and (min-width: $small)
     @media screen and (min-width: $medium)
-      font-size: var(--h2)
     @media screen and (min-width: $large)
