--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -4,11 +4,11 @@
 
 - cache ['imprint', 'v1'] do
   .wrapper.-contained{role: 'layout'}
-    %header.-static.-low-contrast
+    %header.-static
       %h1.heading
-        Dublin Inquirer
-      %p
-        is an independent newspaper launched in June 2015 to provide quality coverage of city affairs. It is published online weekly (on Wednesday mornings) and in print monthly (mid month) from our office in Crumlin.
+        About us
+      %p.p.-b1
+        Dublin Inquirer is an independent newspaper launched in June 2015 to provide quality coverage of city affairs. It is published online weekly (on Wednesday mornings) and in print monthly (mid month) from our office in Crumlin.
 
     %header.header.-modal
       %h2.heading Staff
