don't override og tags with metatags gem

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{name: 'viewport', content: "width=device-width, initial-scale=1, user-scalable=no"}/
     - set_meta_tags site: 'Dublin Inquirer'
-    - set_meta_tags og: { title: :title, site_name: :site, image: :image_src }
+    - set_meta_tags og: {site_name: :site}
     - set_meta_tags twitter: { card: 'photo', site: "@dublininquirer", title: :title, site_name: :site, _: :image_src }
     = display_meta_tags reverse: true, separator: '|'
 
