--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,8 +1,6 @@
 Hello,
 
-You have requested to reset your Dublin Inquirer password.
-
-Click this link to set a new password: <%= @url %>
+Click this link to set a password for your Dublin Inquirer account: <%= @url %>
 
 Let me know if you need any help,
 Brian
