has_many through-ify authors

--- a/app/assets/stylesheets/admin.sass
+++ b/app/assets/stylesheets/admin.sass
@@ -3,10 +3,11 @@
 +reset
 
 @import 'shared/*'
+@import 'components/progress-bar'
 @import 'admin/*'
 
 body
-  border: 0
+  border-top: 0
 
 .button, a.button, a.button:link, a.button:visited, input.button
   display: inline-block
