--- a/app/assets/stylesheets/admin/_admin-main.sass
+++ b/app/assets/stylesheets/admin/_admin-main.sass
@@ -1,9 +1,10 @@
 .admin-main
-  padding: 0 0 0 10rem
+  margin: 0 0 0 10.5rem
   display: flex
   flex-direction: column
   align-items: stretch
   justify-content: stretch
-  height: calc(100vh - 0.75rem)
+  height: 100vh
   overflow: hidden
   border-top: 0.75rem solid var(--black)
+  border-left: 1px solid var(--black)
