--- a/app/views/admin/issues/show.html.haml
+++ b/app/views/admin/issues/show.html.haml
@@ -18,7 +18,7 @@
         - cache ['admin', @issue, article, 'row'] do
           %tr{'data-id': article.id}
             %td= link_to truncate(article.title, length: 92), [:admin, article]
-            %td= link_to truncate(article.author.try(:full_name), length: 92), [:admin, article.author]
+            %td= raw article.authors.map { |author| link_to(author.full_name, [:admin, author]) }.to_sentence
 
 :coffeescript
   for sortableTable in $('tbody.-sortable')
