--- a/app/views/articles/excerpts/_cover.html.haml
+++ b/app/views/articles/excerpts/_cover.html.haml
@@ -13,4 +13,4 @@
           :markdown
             #{ raw article.excerpt }
 
-            <em>Read about this month&rsquo;s cover by #{ article.author.try(:full_name) } &rarr;</em>
+            <em>Read about this month&rsquo;s cover by #{ article.authors.map(&:full_name).to_sentence } &rarr;</em>
