--- a/app/assets/stylesheets/admin/_admin-main.sass
+++ b/app/assets/stylesheets/admin/_admin-main.sass
@@ -1,5 +1,5 @@
 .admin-main
-  margin: 0 0 0 10.5rem
+  padding: 0 0 0 10rem
   display: flex
   flex-direction: column
   align-items: stretch
@@ -7,4 +7,3 @@
   height: 100vh
   overflow: hidden
   border-top: 0.75rem solid var(--black)
-  border-left: 1px solid var(--black)
