--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -109,6 +109,10 @@
     &:hover
       color: var(--blue)
 
+  video
+    width: 100%
+    height: auto
+
   iframe
     width: 100%
     height: 36rem
