add template to landing page

--- a/app/views/admin/landing_pages/_form.html.haml
+++ b/app/views/admin/landing_pages/_form.html.haml
@@ -11,5 +11,9 @@
     .field
       = f.label :slug
       = f.text_field :slug
+    .field
+      = f.label :template
+      = f.text_field :template
+      .hint (Leave blank unless you're Brian.)
 
   .actions= f.submit 'Save', class: 'button'
