--- a/app/views/layouts/plain.html.haml
+++ b/app/views/layouts/plain.html.haml
@@ -22,6 +22,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4000ff">
     <meta name="msapplication-TileColor" content="#4000ff">
     <meta name="theme-color" content="#ff0000">
+    = render partial: 'layouts/snippets/fb'
 
   %body.-plain
     = yield
