--- a/app/views/gift_subscriptions/thanks.html.haml
+++ b/app/views/gift_subscriptions/thanks.html.haml
@@ -13,3 +13,9 @@
 
 %nav.box.-padded-v
   = link_to "Go to the home page", :root, class: 'button -big'
+
+:javascript
+  fbq('track', 'Subscribe', {
+    value: 50,
+    currency: 'eur'
+  });
