--- a/app/views/layouts/error.html.haml
+++ b/app/views/layouts/error.html.haml
@@ -12,6 +12,7 @@
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
+    = render partial: 'layouts/snippets/fb'
 
   %body
     .centered{role: 'layout'}
