--- a/app/views/layouts/front.html.haml
+++ b/app/views/layouts/front.html.haml
@@ -25,6 +25,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#4000ff">
     <meta name="msapplication-TileColor" content="#4000ff">
     <meta name="theme-color" content="#ff0000">
+    = render partial: 'layouts/snippets/fb'
 
   %body
     = render partial: 'layouts/meta-nav', locals: { fixed: true, small: false}
