update vat calculations for post-2018 rates

--- a/app/views/admin/dashboard/show.html.haml
+++ b/app/views/admin/dashboard/show.html.haml
@@ -2,7 +2,7 @@
   .row
     .col-xs-6
       %h2 Current issue
-      - if @current_issue.any?
+      - if @current_issue.try(:any?)
         %table.admin-table
           - @current_issue.each do |article|
             %tr
