--- a/app/assets/stylesheets/components/_invoice-table.sass
+++ b/app/assets/stylesheets/components/_invoice-table.sass
@@ -1,6 +1,6 @@
 .invoice-table
   width: 100%
-  border-top: 1px solid var(--black)
+  border-top: 0.25rem solid var(--black)
   font-size: var(--b3)
 
   td, th
@@ -11,8 +11,5 @@
       text-align: right
 
   tbody
-    tr:nth-child(odd)
-      background-color: var(--even)
-
     tr
       border-top: 1px solid var(--black)
