--- a/app/assets/stylesheets/components/_invoice-table.sass
+++ b/app/assets/stylesheets/components/_invoice-table.sass
@@ -3,6 +3,9 @@
   border-top: 0.25rem solid var(--black)
   font-size: var(--b3)
 
+  th
+    font-weight: 600
+
   td, th
     padding: 0.5rem
     text-align: left
