adding some content to the direct landing page

--- a/app/views/invoices/show.html.haml
+++ b/app/views/invoices/show.html.haml
@@ -45,7 +45,7 @@
     .row
       .col-xs-12
         .block.-py4
-          %table.invoice-table
+          %table.table.-invoice
             %thead
               %tr
                 %th Service
@@ -63,7 +63,7 @@
     .row
       .col-xs-6.col-xs-offset-6
         .block.-py2
-          %table.invoice-table
+          %table.table.-invoice
             %tbody
               %tr.-hr
                 %td Subtotal
