--- a/app/views/landing_pages/direct_190227.html.haml
+++ b/app/views/landing_pages/direct_190227.html.haml
@@ -1,3 +1,42 @@
-Direct 190227
+.wrapper.-medium{role: 'layout'}
+  .block.-py4
+    .text.-centered
+      :markdown
+        ## Help our reporters cover the important stories.
 
-= link_to "Subscribe!", :products
+        ### Subscribe for only €5 per month.
+
+        One month free.<br>
+        Cancel anytime.
+
+  .box
+    .block.-p2
+      :markdown
+        Unlimited access to our online digital edition. This includes everything we publish and access to the full archive of everything we've ever published.
+
+        One month free, and then only €5 per month.
+
+      = link_to "Subscribe", :products, class: 'button'
+
+  .block.-p2
+    .row
+      .col-xs-6
+        :markdown
+          ### Unlimited articles
+
+          Enjoy unlimited article access on *dublininquirer.com* and our mobile-optimised site.
+
+      .col-xs-6
+        :markdown
+          ### Events & exclusives
+
+          Access exclusive features and newsletters, along with previews of new media releases.
+
+.block.-bt.-p2
+  .wrapper.-small{role: 'layout'}
+    :markdown
+      ### Frequently Asked Questions
+
+      What does 'independent' and 'reader-funded' mean?
+
+      What is the cancellation policy?
